--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,71 @@
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');
+:root {
+    --eerie-black: #1E1E1E;
+    --vegas-gold: #BAAF38;
+    --corn: #F8E94A;
+    --pale-spring-bud: #EBE7B8;
+}
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 html {
+    font-size: 62.5%;
     font-family: 'Poppins', sans-serif;
+}
+body {
+    background-image: url('https://i.ibb.co/4NjVR8d/background.jpg');
+}
+header {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    background-color: var(--vegas-gold);
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid var(--corn);
+}
+header h1 {
+    font-size: 3.4rem;
+}
+header h1:before {
+    content: ' ';
+    background-image: url('https://i.ibb.co/dgC8stS/konoha.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0 20px;
+    height: auto;
+    margin-right: 15px;
+}
+header p {
+    font-size: 1.8rem;
+    font-style: italic;
+}
+main {
+    color: var(--pale-spring-bud);
+    font-size: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px auto auto auto;
+    width: 600px;
+}
+main h3 {
+    text-align: left;
+    font-size: 2.4rem;
+    margin-bottom: 10px;
 }
 .grid {
     display: flex;
     flex-wrap: wrap;
     height: auto;
-    width: 600px;
-    border: 10px black solid;
+    width: 620px;
+    border: 10px var(--eerie-black) solid;
 }
